--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
-    "hbs": "~4.0.4",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "i18n": "^0.15.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "node-disk-info": "^1.3.0",
     "os-utils": "^0.0.14",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
